Initial pass at timer-driven sfx for select sfx

--- a/asm/u3drv/Makefile
+++ b/asm/u3drv/Makefile
@@ -2,7 +2,7 @@ ROOT=../..
 include ${ROOT}/Makefile.include
 
 compile: ${U3BIN}/cga.drv ${U3BIN}/cgacomp.drv ${U3BIN}/ega.drv ${U3BIN}/vga.drv \
-        ${U3BIN}/midpak.drv ${U3BIN}/nomidi.drv ${U3BIN}/sfx.drv ${U3BIN}/sfxtest.com
+        ${U3BIN}/midpak.drv ${U3BIN}/nomidi.drv ${U3BIN}/sfx.drv ${U3BIN}/sfxtimed.drv ${U3BIN}/sfxtest.com
 
 VIDDEPS=vidjmp.asm vidfile.asm vidfar.asm ../common/loadfile.asm \
     ../common/xchgs.asm ../common/memory.asm
@@ -28,7 +28,10 @@ ${U3BIN}/nomidi.drv: nomidi.asm | ${U3BIN}
 ${U3BIN}/sfx.drv: sfx.asm sfxfar.asm sfxjmp.asm | ${U3BIN}
 	${ASM} sfx.asm ${U3BIN}/sfx.drv
 
-${U3BIN}/sfxtest.com: sfxtest.asm ../common/loadfile.asm ../common/xchgs.asm ../common/memory.asm | ${U3BIN}
+${U3BIN}/sfxtimed.drv: sfxtimed.asm sfxfar.asm sfxjmp.asm | ${U3BIN}
+	${ASM} sfxtimed.asm ${U3BIN}/sfxtimed.drv
+
+${U3BIN}/sfxtest.com: sfxtest.asm ../common/loadfile.asm ../common/xchgs.asm ../common/memory.asm ../launcher/timer.asm ../launcher/vector.asm | ${U3BIN}
 	${ASM} sfxtest.asm ${U3BIN}/sfxtest.com
 
 clean:
@@ -39,6 +42,7 @@ clean:
 	rm ${U3BIN}/midpak.drv
 	rm ${U3BIN}/nomidi.drv
 	rm ${U3BIN}/sfx.drv
+	rm ${U3BIN}/sfxtimed.drv
 	rm ${U3BIN}/sfxtest.com
 
 package: package_u3
