--- a/asm/Makefile
+++ b/asm/Makefile
@@ -4,7 +4,7 @@ DIRS = color launcher u3drv u5drv
 
 %: FORCE
 	for i in ${DIRS}; do \
-		cd $$i && $(MAKE) $@ || (echo "asm/$$i build failed"; exit 1); \
+		cd $$i && $(MAKE) $@ || (echo "asm/$$i $@ failed"; exit 1); \
 		cd ..; \
 	done
 
