extract mod-able data (maps, coordinates, etc) into sosaria.mod

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -1,10 +1,11 @@
 # directories
-DIRS = color launcher u3drv u5drv
+DIRS = color launcher u3drv u5drv u3mod
 
 
 %: FORCE
 	for i in ${DIRS}; do \
-		cd $$i && $(MAKE) $@ || (echo "asm/$$i $@ failed"; exit 1); \
+		cd $$i; \
+		echo "asm/$$i $@:"; $(MAKE) $@ || exit 1; \
 		cd ..; \
 	done
 
