add more string functions, string unit tests, and use in modcore

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -1,5 +1,5 @@
 # directories
-DIRS = color launcher u3drv u5drv u3mod
+DIRS = color launcher u3drv u5drv u3mod test
 
 
 %: FORCE
@@ -8,6 +8,18 @@ DIRS = color launcher u3drv u5drv u3mod
 		echo "asm/$$i $@:"; $(MAKE) $@ || exit 1; \
 		cd ..; \
 	done
+
+package_u2: FORCE
+	make -C launcher $@
+
+package_u3: FORCE
+	make -C launcher $@
+	make -C u3drv $@
+	make -C u3mod $@
+
+package_u5: FORCE
+	make -C launcher $@
+	make -C u5drv $@
 
 Makefile: ;
 FORCE: ;
