--- a/tools/reset/Makefile
+++ b/tools/reset/Makefile
@@ -40,7 +40,6 @@ ${U3BIN}/u3reset: ${RESET_LIB}/fileutil.o ${RESET_LIB}/u3reset.o \
 # clean
 clean:
 	rm ${U2BIN}/u2reset
-	rm ${U3BIN}/u3reset
 	rm ${RESET_LIB}/*.o
 
 # package
@@ -49,5 +48,6 @@ package: package_u2 package_u3
 package_u2: ${U2PKG} ${U2BIN}/u2reset
 	cp -f ${U2BIN}/u2reset ${U2PKG}/u2reset${BINSUFFIX}
 
-package_u3: ${U3PKG} ${U3BIN}/u3reset
-	cp -f ${U3BIN}/u3reset ${U3PKG}/u3reset${BINSUFFIX}
+package_u3:
+
+package_u5:
