refactor directory list fcn's into DirList

--- a/tools/common/Makefile
+++ b/tools/common/Makefile
@@ -1,7 +1,7 @@
 ROOT=../..
 include ${ROOT}/Makefile.include
 
-compile: ${COMMON_LIB}/File.o
+compile: ${COMMON_LIB}/File.o ${COMMON_LIB}/DirList.o
 
 ${COMMON_LIB}:
 	mkdir -p ${COMMON_LIB}
@@ -10,6 +10,9 @@ ${COMMON_LIB}:
 ${COMMON_LIB}/File.o: File.c File.h gendefs.h | ${COMMON_LIB}
 	$(call compile, ${COMMON_LIB}/File.o, File.c)
 
+${COMMON_LIB}/DirList.o: DirList.c DirList.h File.h gendefs.h | ${COMMON_LIB}
+	$(call compile, ${COMMON_LIB}/DirList.o, DirList.c)
+
 # clean
 clean:
-	rm ${COMMON_LIB}/File.o
+	rm ${COMMON_LIB}/*.o
