refactor binpatch code: separate mains from core functions

--- a/tools/binpatch/Makefile
+++ b/tools/binpatch/Makefile
@@ -1,7 +1,7 @@
 ROOT=../..
 include ${ROOT}/Makefile.include
 
-HEADERS=${COMMON}/File.h ${COMMON}/gendefs.h patchadd.h patch.h
+HEADERS=${COMMON}/File.h ${COMMON}/gendefs.h patch.h
 
 compile: ${UTILBIN}/bindiff ${UTILBIN}/binpat ${UTILBIN}/binunpat
 
@@ -9,30 +9,38 @@ ${BINPATCH_LIB}:
 	mkdir -p ${BINPATCH_LIB}
 
 # object files
-${BINPATCH_LIB}/bindiff.o: bindiff.c bindiff.h ${HEADERS} | ${BINPATCH_LIB}
+${BINPATCH_LIB}/bindiff.o: bindiff.c bindiff.h patchadd.h ${HEADERS} | ${BINPATCH_LIB}
 	$(call compile, ${BINPATCH_LIB}/bindiff.o, bindiff.c)
 
-${BINPATCH_LIB}/binpatch.o: binpatch.c binpatch.h ${HEADERS} | ${BINPATCH_LIB}
+${BINPATCH_LIB}/binpatch.o: binpatch.c binpatch.h patchapply.h ${HEADERS} | ${BINPATCH_LIB}
 	$(call compile, ${BINPATCH_LIB}/binpatch.o, binpatch.c)
 
-${BINPATCH_LIB}/binunpatch.o: binunpatch.c binunpatch.h ${HEADERS} | ${BINPATCH_LIB}
+${BINPATCH_LIB}/binunpatch.o: binunpatch.c binunpatch.h patchunapply.h ${HEADERS} | ${BINPATCH_LIB}
 	$(call compile, ${BINPATCH_LIB}/binunpatch.o, binunpatch.c)
 
-${BINPATCH_LIB}/patch.o: patch.c patch.h | ${BINPATCH_LIB}
+${BINPATCH_LIB}/patch.o: patch.c patch.h ${HEADERS} | ${BINPATCH_LIB}
 	$(call compile, ${BINPATCH_LIB}/patch.o, patch.c)
 
-${BINPATCH_LIB}/patchadd.o: patchadd.c ${HEADERS} | ${BINPATCH_LIB}
+${BINPATCH_LIB}/patchadd.o: patchadd.c patchadd.h ${HEADERS} | ${BINPATCH_LIB}
 	$(call compile, ${BINPATCH_LIB}/patchadd.o, patchadd.c)
+
+${BINPATCH_LIB}/patchapply.o: patchapply.c patchapply.h ${HEADERS} | ${BINPATCH_LIB}
+	$(call compile, ${BINPATCH_LIB}/patchapply.o, patchapply.c)
+
+${BINPATCH_LIB}/patchunapply.o: patchunapply.c patchunapply.h ${HEADERS} | ${BINPATCH_LIB}
+	$(call compile, ${BINPATCH_LIB}/patchunapply.o, patchunapply.c)
 
 # binary files
 # NOTE: Windows 7 requires Admin rights to 'binpatch.exe'. But 'binpat.exe' is okay.  (WTF?!)
-${UTILBIN}/binpat: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binpatch.o ${BINPATCH_LIB}/patch.o | ${UTILBIN}
+${UTILBIN}/binpat: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binpatch.o ${BINPATCH_LIB}/patch.o \
+		${BINPATCH_LIB}/patchapply.o | ${UTILBIN}
 	$(call link, ${UTILBIN}/binpat, ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binpatch.o \
-		${BINPATCH_LIB}/patch.o)
+		${BINPATCH_LIB}/patch.o ${BINPATCH_LIB}/patchapply.o)
 
-${UTILBIN}/binunpat: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binunpatch.o ${BINPATCH_LIB}/patch.o | ${UTILBIN}
+${UTILBIN}/binunpat: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binunpatch.o ${BINPATCH_LIB}/patch.o \
+		${BINPATCH_LIB}/patchunapply.o | ${UTILBIN}
 	$(call link, ${UTILBIN}/binunpat, ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binunpatch.o \
-		${BINPATCH_LIB}/patch.o)
+		${BINPATCH_LIB}/patch.o ${BINPATCH_LIB}/patchunapply.o)
 
 ${UTILBIN}/bindiff: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/bindiff.o ${BINPATCH_LIB}/patch.o \
 		${BINPATCH_LIB}/patchadd.o | ${UTILBIN}
