launch via ultimaii.exe instead of u2ega.exe

--- a/patches/Makefile
+++ b/patches/Makefile
@@ -22,9 +22,8 @@ patch_u3: ${U3PAT}
 
 patch_u5: ${U5PAT}
 
-${U2PAT}: ${U2UPGRADE}/ULTIMAII.EXE ${U2UPGRADE}/U2EGA.EXE ${U2UPGRADE}/MAPX10 ${U2UPGRADE}/MAPX15
+${U2PAT}: ${U2UPGRADE}/ULTIMAII.EXE ${U2UPGRADE}/MAPX10 ${U2UPGRADE}/MAPX15
 	rm -f ${U2PAT}
-	${DIFF} -s 3 -o ${U2ORIGINAL}/ULTIMAII.EXE -n ${U2UPGRADE}/U2EGA.EXE -p ${U2PAT} -u
 	${DIFF} -s 3 -o ${U2ORIGINAL}/ULTIMAII.EXE -n ${U2UPGRADE}/ULTIMAII.EXE -p ${U2PAT}
 	${DIFF} -s 3 -o ${U2ORIGINAL}/MAPX10 -n ${U2UPGRADE}/MAPX10 -p ${U2PAT}
 	${DIFF} -s 3 -o ${U2ORIGINAL}/MAPX15 -n ${U2UPGRADE}/MAPX15 -p ${U2PAT}
