apply param changes to patch makefile

--- a/patches/Makefile
+++ b/patches/Makefile
@@ -24,64 +24,64 @@ patch_u5: ${U5PAT}
 
 ${U2PAT}: ${U2UPGRADE}/ULTIMAII.EXE ${U2UPGRADE}/MAPX10 ${U2UPGRADE}/MAPX15
 	rm -f ${U2PAT}
-	${DIFF} -s 3 -o ${U2ORIGINAL}/ULTIMAII.EXE -n ${U2UPGRADE}/ULTIMAII.EXE -p ${U2PAT}
+	${DIFF} -od ${U2ORIGINAL} -o ULTIMAII.EXE -nd ${U2UPGRADE} -n ULTIMAII.EXE -p ${U2PAT}
 	# patch greenland dungeon
-	${DIFF} -s 3 -o ${U2ORIGINAL}/MAPX10 -n ${U2UPGRADE}/MAPX10 -p ${U2PAT}
-	${DIFF} -s 3 -o ${U2ORIGINAL}/MAPX15 -n ${U2UPGRADE}/MAPX15 -p ${U2PAT}
+	${DIFF} -od ${U2ORIGINAL} -o MAPX10 -nd ${U2UPGRADE} -n MAPX10 -p ${U2PAT}
+	${DIFF} -od ${U2ORIGINAL} -o MAPX15 -nd ${U2UPGRADE} -n MAPX15 -p ${U2PAT}
 	# rename map files
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MAPX44 -n ${U2UPGRADE}/MAPG44 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MAPX50 -n ${U2UPGRADE}/MAPG50 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MAPX60 -n ${U2UPGRADE}/MAPG60 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MAPX61 -n ${U2UPGRADE}/MAPG61 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MAPX70 -n ${U2UPGRADE}/MAPG70 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MAPX71 -n ${U2UPGRADE}/MAPG71 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MAPX80 -n ${U2UPGRADE}/MAPG80 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MAPX81 -n ${U2UPGRADE}/MAPG81 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MAPX82 -n ${U2UPGRADE}/MAPG82 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MAPX85 -n ${U2UPGRADE}/MAPG85 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MAPX90 -n ${U2UPGRADE}/MAPG90 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MAPX92 -n ${U2UPGRADE}/MAPG92 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MAPX93 -n ${U2UPGRADE}/MAPG93 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MAPX44 -nd ${U2UPGRADE} -n MAPG44 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MAPX50 -nd ${U2UPGRADE} -n MAPG50 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MAPX60 -nd ${U2UPGRADE} -n MAPG60 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MAPX61 -nd ${U2UPGRADE} -n MAPG61 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MAPX70 -nd ${U2UPGRADE} -n MAPG70 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MAPX71 -nd ${U2UPGRADE} -n MAPG71 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MAPX80 -nd ${U2UPGRADE} -n MAPG80 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MAPX81 -nd ${U2UPGRADE} -n MAPG81 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MAPX82 -nd ${U2UPGRADE} -n MAPG82 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MAPX85 -nd ${U2UPGRADE} -n MAPG85 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MAPX90 -nd ${U2UPGRADE} -n MAPG90 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MAPX92 -nd ${U2UPGRADE} -n MAPG92 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MAPX93 -nd ${U2UPGRADE} -n MAPG93 -p ${U2PAT}
 	# rename mon files
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MONX44 -n ${U2UPGRADE}/MONG44 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MONX50 -n ${U2UPGRADE}/MONG50 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MONX60 -n ${U2UPGRADE}/MONG60 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MONX61 -n ${U2UPGRADE}/MONG61 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MONX70 -n ${U2UPGRADE}/MONG70 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MONX71 -n ${U2UPGRADE}/MONG71 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MONX80 -n ${U2UPGRADE}/MONG80 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MONX81 -n ${U2UPGRADE}/MONG81 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MONX82 -n ${U2UPGRADE}/MONG82 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MONX85 -n ${U2UPGRADE}/MONG85 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MONX90 -n ${U2UPGRADE}/MONG90 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MONX92 -n ${U2UPGRADE}/MONG92 -p ${U2PAT}
-	${DIFF} -s 3 -a rename -o ${U2ORIGINAL}/MONX93 -n ${U2UPGRADE}/MONG93 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MONX44 -nd ${U2UPGRADE} -n MONG44 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MONX50 -nd ${U2UPGRADE} -n MONG50 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MONX60 -nd ${U2UPGRADE} -n MONG60 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MONX61 -nd ${U2UPGRADE} -n MONG61 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MONX70 -nd ${U2UPGRADE} -n MONG70 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MONX71 -nd ${U2UPGRADE} -n MONG71 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MONX80 -nd ${U2UPGRADE} -n MONG80 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MONX81 -nd ${U2UPGRADE} -n MONG81 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MONX82 -nd ${U2UPGRADE} -n MONG82 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MONX85 -nd ${U2UPGRADE} -n MONG85 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MONX90 -nd ${U2UPGRADE} -n MONG90 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MONX92 -nd ${U2UPGRADE} -n MONG92 -p ${U2PAT}
+	${DIFF} -a rename -od ${U2ORIGINAL} -o MONX93 -nd ${U2UPGRADE} -n MONG93 -p ${U2PAT}
 	# create additional mon files
-	${DIFF} -s 3 -a create -n ${U2UPGRADE}/MONG20 -p ${U2PAT}
-	${DIFF} -s 3 -a copy -o ${U2ORIGINAL}/MONG20 -n ${U2UPGRADE}/MONG10 -p ${U2PAT}
-	${DIFF} -s 3 -a copy -o ${U2ORIGINAL}/MONG20 -n ${U2UPGRADE}/MONG15 -p ${U2PAT}
-	${DIFF} -s 3 -a copy -o ${U2ORIGINAL}/MONG20 -n ${U2UPGRADE}/MONG30 -p ${U2PAT}
-	${DIFF} -s 3 -a copy -o ${U2ORIGINAL}/MONG20 -n ${U2UPGRADE}/MONG40 -p ${U2PAT}
-	${DIFF} -s 3 -a copy -o ${U2ORIGINAL}/MONG20 -n ${U2UPGRADE}/MONG45 -p ${U2PAT}
+	${DIFF} -a create -nd ${U2UPGRADE} -n MONG20 -p ${U2PAT}
+	${DIFF} -a copy -od ${U2ORIGINAL} -o MONG20 -nd ${U2UPGRADE} -n MONG10 -p ${U2PAT}
+	${DIFF} -a copy -od ${U2ORIGINAL} -o MONG20 -nd ${U2UPGRADE} -n MONG15 -p ${U2PAT}
+	${DIFF} -a copy -od ${U2ORIGINAL} -o MONG20 -nd ${U2UPGRADE} -n MONG30 -p ${U2PAT}
+	${DIFF} -a copy -od ${U2ORIGINAL} -o MONG20 -nd ${U2UPGRADE} -n MONG40 -p ${U2PAT}
+	${DIFF} -a copy -od ${U2ORIGINAL} -o MONG20 -nd ${U2UPGRADE} -n MONG45 -p ${U2PAT}
 
 ${U3PAT}: ${U3UPGRADE}/ULTIMA.COM ${U3UPGRADE}/BOOTUP.BIN ${U3UPGRADE}/EXODUS.BIN ${U3UPGRADE}/DUNGEON.DAT
 	rm -f ${U3PAT}
-	${DIFF} -s 3 -o ${U3ORIGINAL}/ULTIMA.COM -n ${U3UPGRADE}/ULTIMA.COM -p ${U3PAT}
-	${DIFF} -s 3 -o ${U3ORIGINAL}/BOOTUP.BIN -n ${U3UPGRADE}/BOOTUP.BIN -p ${U3PAT}
-	${DIFF} -s 3 -o ${U3ORIGINAL}/EXODUS.BIN -n ${U3UPGRADE}/EXODUS.BIN -p ${U3PAT}
-	${DIFF} -s 3 -o ${U3ORIGINAL}/DUNGEON.DAT -n ${U3UPGRADE}/DUNGEON.DAT -p ${U3PAT}
+	${DIFF} -od ${U3ORIGINAL} -o ULTIMA.COM -nd ${U3UPGRADE} -n ULTIMA.COM -p ${U3PAT}
+	${DIFF} -od ${U3ORIGINAL} -o BOOTUP.BIN -nd ${U3UPGRADE} -n BOOTUP.BIN -p ${U3PAT}
+	${DIFF} -od ${U3ORIGINAL} -o EXODUS.BIN -nd ${U3UPGRADE} -n EXODUS.BIN -p ${U3PAT}
+	${DIFF} -od ${U3ORIGINAL} -o DUNGEON.DAT -nd ${U3UPGRADE} -n DUNGEON.DAT -p ${U3PAT}
 
 ${U5PAT}: ${U5UPGRADE}/ULTIMA.EXE ${U5UPGRADE}/INTRO.OVL ${U5UPGRADE}/MAINOUT.OVL ${U5UPGRADE}/TOWN.OVL \
         ${U5UPGRADE}/DUNGEON.OVL ${U5UPGRADE}/ENDGAME.OVL ${U5UPGRADE}/FONT.OVL ${U5UPGRADE}/DATA.OVL
 	rm -f ${U5PAT}
-	${DIFF} -s 3 -o ${U5ORIGINAL}/ULTIMA.EXE -n ${U5UPGRADE}/ULTIMA.EXE -p ${U5PAT}
-	${DIFF} -s 3 -o ${U5ORIGINAL}/INTRO.OVL -n ${U5UPGRADE}/INTRO.OVL -p ${U5PAT}
-	${DIFF} -s 3 -o ${U5ORIGINAL}/MAINOUT.OVL -n ${U5UPGRADE}/MAINOUT.OVL -p ${U5PAT}
-	${DIFF} -s 3 -o ${U5ORIGINAL}/TOWN.OVL -n ${U5UPGRADE}/TOWN.OVL -p ${U5PAT}
-	${DIFF} -s 3 -o ${U5ORIGINAL}/DUNGEON.OVL -n ${U5UPGRADE}/DUNGEON.OVL -p ${U5PAT}
-	${DIFF} -s 3 -o ${U5ORIGINAL}/ENDGAME.OVL -n ${U5UPGRADE}/ENDGAME.OVL -p ${U5PAT}
-	${DIFF} -s 3 -o ${U5ORIGINAL}/FONT.OVL -n ${U5UPGRADE}/FONT.OVL -p ${U5PAT}
-	${DIFF} -s 3 -o ${U5ORIGINAL}/DATA.OVL -n ${U5UPGRADE}/DATA.OVL -p ${U5PAT}
+	${DIFF} -od ${U5ORIGINAL} -o ULTIMA.EXE -nd ${U5UPGRADE} -n ULTIMA.EXE -p ${U5PAT}
+	${DIFF} -od ${U5ORIGINAL} -o INTRO.OVL -nd ${U5UPGRADE} -n INTRO.OVL -p ${U5PAT}
+	${DIFF} -od ${U5ORIGINAL} -o MAINOUT.OVL -nd ${U5UPGRADE} -n MAINOUT.OVL -p ${U5PAT}
+	${DIFF} -od ${U5ORIGINAL} -o TOWN.OVL -nd ${U5UPGRADE} -n TOWN.OVL -p ${U5PAT}
+	${DIFF} -od ${U5ORIGINAL} -o DUNGEON.OVL -nd ${U5UPGRADE} -n DUNGEON.OVL -p ${U5PAT}
+	${DIFF} -od ${U5ORIGINAL} -o ENDGAME.OVL -nd ${U5UPGRADE} -n ENDGAME.OVL -p ${U5PAT}
+	${DIFF} -od ${U5ORIGINAL} -o FONT.OVL -nd ${U5UPGRADE} -n FONT.OVL -p ${U5PAT}
+	${DIFF} -od ${U5ORIGINAL} -o DATA.OVL -nd ${U5UPGRADE} -n DATA.OVL -p ${U5PAT}
 
 ### package build targets ###
 
