Add U2 patch for GOG release (differs from U1-6/UC)

--- a/Makefile.include
+++ b/Makefile.include
@@ -109,6 +109,7 @@ U5ORIGINAL=${ROOT}/game/u5orig
 U2UPGRADE=${ROOT}/game/u2up
 U3UPGRADE=${ROOT}/game/u3up
 U5UPGRADE=${ROOT}/game/u5up
+U2GOG=${ROOT}/game/u2orig.gog
 
 # upgrade package versions
 U2VER=1.2
