--- a/patches/Makefile
+++ b/patches/Makefile
@@ -3,6 +3,7 @@ ROOT = ..
 include ${ROOT}/Makefile.include
 
 # patch filenames
+U2PATGOG = ${PATCHES}/u2-gog.pat
 U2PAT = ${PATCHES}/u2up-$(call stripdots,${U2VER}).pat
 U3PAT = ${PATCHES}/u3up-$(call stripdots,${U3VER}).pat
 U5PAT = ${PATCHES}/u5up-$(call stripdots,${U5VER}).pat
@@ -16,11 +17,44 @@ clean:
 
 patch: ${U2PAT} ${U3PAT} ${U5PAT}
 
-patch_u2: ${U2PAT}
+patch_u2: ${U2PATGOG} ${U2PAT}
 
 patch_u3: ${U3PAT}
 
 patch_u5: ${U5PAT}
+
+${U2PATGOG}:
+	rm -f ${U2PATGOG}
+	${DIFF} -od ${U2ORIGINAL} -nd ${U2GOG} -o ULTIMAII.EXE -n ULTIMAII.EXE -p ${U2PATGOG}
+	# patch greenland dungeon
+	${DIFF} -od ${U2ORIGINAL} -nd ${U2GOG} -o MAPX10 -n MAPX10 -p ${U2PATGOG}
+	${DIFF} -od ${U2ORIGINAL} -nd ${U2GOG} -o MAPX15 -n MAPX15 -p ${U2PATGOG}
+	# patch earth talk files
+	for i in 03 11 21 22 23 31 32 33 41; do \
+		${DIFF} -od ${U2ORIGINAL} -nd ${U2UPGRADE} -o TLKX$${i} -n TLKX$${i} -p ${U2PATGOG}; \
+	done
+	# rename existing galaxy map & monster files
+	for i in 44 50 60 61 70 71 80 81 82 85 90 92 93; do \
+		${DIFF} -a rename -od ${U2ORIGINAL} -nd ${U2GOG} -o MAPX$${i} -n mapg$${i} -p ${U2PATGOG}; \
+		${DIFF} -a rename -od ${U2ORIGINAL} -nd ${U2GOG} -o MONX$${i} -n mong$${i} -p ${U2PATGOG}; \
+	done
+	# rename & patch existing galaxy talk files
+	for i in 61 71 81 82 92 93; do \
+		${DIFF} -a rename -od ${U2ORIGINAL} -nd ${U2GOG} -o TLKX$${i} -n TLKG$${i} -p ${U2PATGOG}; \
+	done
+	# add missing galaxy map & monster files
+	for i in 10 15 30 40 45; do \
+		${DIFF} -a add -nd ${U2GOG} -n MAPG$${i} -p ${U2PATGOG}; \
+		${DIFF} -a add -nd ${U2GOG} -n mong$${i} -p ${U2PATGOG}; \
+	done
+	for i in 20 32 41; do \
+		${DIFF} -a add -nd ${U2GOG} -n MAPG$${i} -p ${U2PATGOG}; \
+		${DIFF} -a add -nd ${U2GOG} -n MONG$${i} -p ${U2PATGOG}; \
+	done
+	# add missing galaxy talk files
+	for i in 32 41; do \
+		${DIFF} -a add -nd ${U2GOG} -n TLKG$${i} -p ${U2PATGOG}; \
+	done
 
 ${U2PAT}:
 	rm -f ${U2PAT}
@@ -75,6 +109,7 @@ package: package_u2 package_u3 package_u5
 
 package_u2: ${U2PAT}
 	echo "Packaging Patches for U2"
+	cp -f ${U2PATGOG} ${U2PKG}
 	cp -f ${U2PAT} ${U2PKG}
 
 package_u3: ${U3PAT}
